@@ -11,6 +11,7 @@
 %Document new colourspaces for -add-text -add-rectangle
 %Document -table-of-contents, -table-of-contents-title (inc. newlines), -font. Mention -upright.
 %Document -typeset
+%Document -idir-only-pdfs must precede -idir
 \documentclass{book}
 % Edit here to produce cpdfmanual.pdf, cpdflibmanual.pdf, pycpdfmanual.pdf etc.
 \usepackage{comment}\excludecomment{cpdflib}\excludecomment{pycpdflib}
