@@ -5,6 +5,7 @@ New features:
 o Can read as well as write PDFs in JSON format with -j
 o New operation -typeset typesets a text file as a PDF
 o New operation -table-of-contents makes table of contents from bookmarks
+o New operations -impose and -impose-xy for document imposition
 o New operation -print-font-table gives (charcode, unicode, glyph name) triples
 o New -print-dict-entry operation prints values for a given key
 o New -replace-dict-entry function to search & replace e.g URLs
@@ -13,7 +14,6 @@ o Prepend NOT to a page range to invert it
 o Output annotations in JSON form with -list-annotations-json
 o Output bookmarks in JSON format with -list-bookmarks-json
 o Load bookmarks in JSON format with -add-bookmarks-json
-o New operations -impose and -impose-xy for document imposition
 o New option -collate to collate pages when merging
 o Text added in existing fonts is now encoding-aware (plus new raw mode)
 o Option -debug-force now properly documented as -decrypt-force
@@ -26,6 +26,7 @@ o When adding text or graphics, may choose CYMK or Grey instead of RGB
 o The -list-fonts operation now obeys the range
 o Can now search for a font by real name with -font
 o Basic merging of AcroForms when merging documents
+o Add -idir-only-pdfs to restrict -idir to just files ending in .pdf
 
 Internal changes:
 
